versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/ImaginaryAnomalousFactor.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalImaginaryAnomalousFactor
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function ImaginaryAnomalousFactorDefaultConst() &
      bind(C, name='ImaginaryAnomalousFactorDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ImaginaryAnomalousFactorDefaultConst

!! Create, default
function ImaginaryAnomalousFactorDefault() &
      bind(C, name='ImaginaryAnomalousFactorDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ImaginaryAnomalousFactorDefault

!! Create, general, const
function ImaginaryAnomalousFactorCreateConst( &
   XYs1d &
) &
      bind(C, name='ImaginaryAnomalousFactorCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: XYs1d
   type(c_ptr) :: handle
end function ImaginaryAnomalousFactorCreateConst

!! Create, general
function ImaginaryAnomalousFactorCreate( &
   XYs1d &
) &
      bind(C, name='ImaginaryAnomalousFactorCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: XYs1d
   type(c_ptr) :: handle
end function ImaginaryAnomalousFactorCreate

!! Assign
subroutine ImaginaryAnomalousFactorAssign(handleLHS, handleRHS) &
      bind(C, name='ImaginaryAnomalousFactorAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine ImaginaryAnomalousFactorAssign

!! Delete
subroutine ImaginaryAnomalousFactorDelete(handle) &
      bind(C, name='ImaginaryAnomalousFactorDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine ImaginaryAnomalousFactorDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function ImaginaryAnomalousFactorRead(handle, filename, filenameSize) &
      bind(C, name='ImaginaryAnomalousFactorRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ImaginaryAnomalousFactorRead

!! Write to file
function ImaginaryAnomalousFactorWrite(handle, filename, filenameSize) &
      bind(C, name='ImaginaryAnomalousFactorWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ImaginaryAnomalousFactorWrite

!! Print to standard output, in our prettyprinting format
function ImaginaryAnomalousFactorPrint(handle) &
      bind(C, name='ImaginaryAnomalousFactorPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ImaginaryAnomalousFactorPrint

!! Print to standard output, as XML
function ImaginaryAnomalousFactorPrintXML(handle) &
      bind(C, name='ImaginaryAnomalousFactorPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ImaginaryAnomalousFactorPrintXML

!! Print to standard output, as JSON
function ImaginaryAnomalousFactorPrintJSON(handle) &
      bind(C, name='ImaginaryAnomalousFactorPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ImaginaryAnomalousFactorPrintJSON


!! -----------------------------------------------------------------------------
!! Child: XYs1d
!! -----------------------------------------------------------------------------

!! Has
function ImaginaryAnomalousFactorXYs1dHas(handle) &
      bind(C, name='ImaginaryAnomalousFactorXYs1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ImaginaryAnomalousFactorXYs1dHas

!! Get, const
function ImaginaryAnomalousFactorXYs1dGetConst(handle) &
      bind(C, name='ImaginaryAnomalousFactorXYs1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ImaginaryAnomalousFactorXYs1dGetConst

!! Get
function ImaginaryAnomalousFactorXYs1dGet(handle) &
      bind(C, name='ImaginaryAnomalousFactorXYs1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ImaginaryAnomalousFactorXYs1dGet

!! Set
subroutine ImaginaryAnomalousFactorXYs1dSet(handle, fieldHandle) &
      bind(C, name='ImaginaryAnomalousFactorXYs1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ImaginaryAnomalousFactorXYs1dSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalImaginaryAnomalousFactor
